@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-03T08:12:43Z",
-  "count_outdated" : 172,
-  "uniques_outdated" : 146,
-  "count" : 180,
-  "uniques" : 153,
+  "timestamp" : "2023-09-04T08:14:50Z",
+  "count_outdated" : 173,
+  "uniques_outdated" : 147,
+  "count" : 181,
+  "uniques" : 154,
   "clones" : [
-    {
-      "timestamp": "2023-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-23T00:00:00Z",
       "count": 1,
@@ -58,6 +49,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
