@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2023-08-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-08-23T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -31,6 +26,11 @@
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
